Crypto FFI: libsodium AEAD + Blake2b via JDK Panama (T011; T009 partial)
#3 — real crypto from Scala via the Foreign Function & Memory API (no hand-rolled primitives,
Constitution I). libsodium resolved from LIBSODIUM_PATH / Homebrew paths; forked tests run with
--enable-native-access.

- Sodium: FFM downcall bindings for crypto_aead_chacha20poly1305_ietf_encrypt/decrypt and
  crypto_generichash (Blake2b), with confined-arena buffer marshalling.
- Crypto facade: aeadSeal/aeadOpen (ChaCha20-Poly1305 IETF), blake2b, keyed-Blake2b kdf.
- mcrypto CLI: aead-seal | aead-open | kdf | kat (Constitution V).
- Tests (6): AEAD round-trip; **KAT — libsodium output byte-identical to JDK ChaCha20-Poly1305**
  (two independent vetted impls agree); tamper + wrong-AAD rejection; Blake2b determinism/length/
  distinctness; keyed-KDF determinism + key-dependence.

T009 partial: harness + AEAD cross-impl KAT done; static RFC 8439/7693 published vectors TODO.
T012 (double ratchet) deferred — no readily-available audited JVM ratchet lib yet.

All 30 tests green (protocol-core 20 + server 4 + crypto 6).